; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/avi/extr_avi_writer.c_avi_index_chunk_id_from_track_num.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/containers/avi/extr_avi_writer.c_avi_index_chunk_id_from_track_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i32)* @avi_index_chunk_id_from_track_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avi_index_chunk_id_from_track_num(i64* %0, i32 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca [3 x i8], align 1
  store i64* %0, i64** %3, align 8
  store i32 %1, i32* %4, align 4
  store i64 0, i64* %5, align 8
  %7 = call i64 @VC_FOURCC(i8 signext 105, i8 signext 120, i32 48, i32 48)
  store i64 %7, i64* %5, align 8
  %8 = getelementptr inbounds [3 x i8], [3 x i8]* %6, i64 0, i64 0
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @snprintf(i8* %8, i32 3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = bitcast i64* %5 to i32*
  %12 = getelementptr inbounds i32, i32* %11, i64 2
  %13 = getelementptr inbounds [3 x i8], [3 x i8]* %6, i64 0, i64 0
  %14 = call i32 @memcpy(i32* %12, i8* %13, i32 2)
  %15 = load i64, i64* %5, align 8
  %16 = load i64*, i64** %3, align 8
  store i64 %15, i64* %16, align 8
  ret void
}

declare dso_local i64 @VC_FOURCC(i8 signext, i8 signext, i32, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @memcpy(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
